--- a/css/style.css
+++ b/css/style.css
@@ -1,159 +1,331 @@
-html, body{
-  min-width:1200px;
-  min-height: 2416px;
-  font-size: 16px;
-  line-height: 22px;
-  color:black;
-  font-weight: bold;
-  font-family: Roboto;
-  margin:0;
-  padding:0;
-  outline:black;
-}
-.clearfix::after{
-  content:"";
-  display: table;
-  clear:both;
-}
-.main-header{
-margin-bottom:10px;
-}
-.container{
-  width:1146px;
-  margin:0 auto;
-  padding: 0 27px;
-}
-.main-navigation{
-  width:690px;
-  float:left;
-  list-style: none;
-}
-.logo{
-  display: inline-block;}
-.contacts{
-  width:267px;
-  float:right;
-}
-.promo-slider{
-}
-.breadcrumbs{
-display: inline-block;
-list-style: none;
-}
-.features::after{
-  content: "";
-  display: table;
-  clear: both;
-}
-.features-raspberry{
-  width:560px;
-  float:left;
-  margin-right: 26px;
-}
-.features-chocolate{
-  width:560px;
-  float:right;
-}
-.product{
-  margin-top:38px;
-  width:267px;
-  display:inline-block;
-  margin-right:22px;
-  margin-bottom:38px;
-  vertical-align: top;
-  text-align: center;
-}
-.product:nth-child(4n){
-  margin-right:0px;
-}
-.products-catalog{
-  margin-bottom: 18px;
-}
-.advantages{
-  padding-top: 29px;
-  width:1146px;
-  margin-bottom: 38px;
-}
-.advantages::after{
-  content: "";
-  display: table;
-  clear: both;
-}
-.advantages-title{
-  margin-left:20px;
-  font-size: 24px;
-  line-height: 30px;
-  font-family: Roboto;
-  font-weight: medium;
-}
-.advantages li{
-  float:left;
-  width:490px;
-  margin-right:60px;
-  list-style: none;
-  margin-bottom: 24px;
-}
-.news-subscription{
-margin-bottom:38px;
-}
-.news-subscription::after{
-  content: "";
-  display: table;
-  clear: both;
-}
-article {
-  float:left;
-  width:560px;
-  margin-right: 26px;
-}
-.subscription{
-  float:right;
-  width:560px;
-}
-.map{
-  margin-bottom: 18px;
-}
-.map::after{
-  content: "";
-  display: table;
-  clear: both;
-}
-.address{
-  float:right;
-  width:302px;
-  padding-bottom: 57px;
-}
-.paginator{
-display: inline-block;
-}
-.main-footer{
-  margin-bottom: 22px;
-}
-.main-footer::after{
-  content: "";
-  display: table;
-  clear: both;
-}
-.footer-social{
-  float: left;
-  width:267px;
-  margin-right: 26px;
-}
-.footer-menu{
-  font-size: 13px;
-  line-height:normal;
-  color:#ffffff;
-  font-weight:normal;
-  font-family: Roboto Regular;
-  width:551px;
-  float: left;
-  margin-right: 25px;
-}
-.footer-copyright{
-  font-size: 12px;
-  line-height:normal;
-  color:black;
-  font-weight:normal;
-  font-family: Roboto Regular;
-  float:right;
-}
+      * {
+        outline: 1px solid black;
+      }
+
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      body {
+        min-width: 1200px;
+        font-size: 16px;
+        line-height: 1.2;
+        color: #ffffff;
+        font-weight: bold;
+        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+        background-color: #849d8f;
+      }
+
+      body > input[type="radio"] {
+        display: none;
+      }
+
+      .site-wrapper {
+        min-width: 940px;
+        background-repeat: no-repeat;
+        background-image: url("../img/bg-first.png");
+        background-position: top center;
+        transition: background-image 0.5s ease, background-color 0.5s ease;
+      }
+
+      .site-wrapper:before,
+      .site-wrapper:after {
+        content: "";
+        visibility: hidden;
+      }
+
+      .site-wrapper:before,
+      .site-wrapper:after {
+        background-image: url("../img/bg-first.png");
+      }
+
+      .site-wrapper:after {
+        background-image: url("../img/bg-second.png");
+      }
+
+      .slider {
+        position: relative;
+        padding-top: 270px;
+        text-align: center;
+        color: #ffffff;
+      }
+
+      .slide {
+        display: none;
+      }
+
+      .slide-title {
+        width: 700px;
+        margin: 0 auto;
+        margin-bottom: 30px;
+        font-weight: 800;
+        font-size: 60px;
+      }
+
+      .btn-slide {
+        display: inline-block;
+        padding: 12px 50px;
+        font-weight: 600;
+        font-size: 31px;
+        line-height: 41px;
+        vertical-align: top;
+        color: #ffffff;
+        text-decoration: none;
+        text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+        background: #f26843;
+        background: -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+        background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+        background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+        border-radius: 100px;
+        box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+      }
+
+      .btn-red:hover {
+        background: -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+        background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+        background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+        box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+      }
+
+      .btn-red:active {
+        background: -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
+        background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
+        background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+        box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+      }
+
+      .slider-controls {
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        z-index: 20;
+        font-size: 0;
+      }
+
+      .slider-controls label {
+        display: inline-block;
+        width: 17px;
+        height: 17px;
+        margin-right: 8px;
+        vertical-align: top;
+        background-color: transparent;
+        border: 2px solid #ffffff;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
+      #btn-1:checked ~ .site-wrapper #slide1,
+      #btn-2:checked ~ .site-wrapper #slide2,
+      #btn-3:checked ~ .site-wrapper #slide3 {
+        display: block;
+      }
+
+      #btn-1:checked ~ .site-wrapper {
+        background-color: #849d8f;
+        background-image: url("../img/bg-first.png");
+      }
+
+      #btn-2:checked ~ .site-wrapper {
+        background-color: #8996a6;
+        background-image: url("../img/bg-second.png");
+      }
+
+      #btn-3:checked ~ .site-wrapper {
+        background-color: #9d8b84;
+        background-image: url("../img/bg-third.png");
+      }
+
+      #btn-1:checked ~ .site-wrapper label[for="btn-1"],
+      #btn-2:checked ~ .site-wrapper label[for="btn-2"],
+      #btn-3:checked ~ .site-wrapper label[for="btn-3"] {
+        background-color: #ffffff;
+      }
+
+      .clearfix::after {
+        content: "";
+        display: block;
+        clear: both;
+      }
+
+      .main-header {
+        margin-bottom: 10px;
+      }
+
+      .container {
+        width: 1146px;
+        margin: 0 auto;
+        padding: 0 27px;
+      }
+
+      .main-navigation {
+        width: 690px;
+        float: left;
+        list-style: none;
+      }
+
+      .logo {
+        display: inline-block;
+      }
+
+      .header-top {
+        position: relative;
+      }
+
+      .contacts {
+        position: absolute;
+        width: 267px;
+        right: 1px;
+        top:60px;
+      }
+
+      .promo-slider {}
+
+      .breadcrumbs {
+        display: inline-block;
+        list-style: none;
+      }
+
+      .features {
+        margin-bottom: 38px
+      }
+
+      .features h3 {
+        font-size: 35px;
+        line-height: 1.2;
+        padding-left: 18px;
+      }
+
+      .features p {
+        font-size: 18px;
+        line-height: 1.2;
+        padding-left: 18px;
+      }
+
+      .features-raspberry {
+        width: 560px;
+        float: left;
+        margin-right: 26px;
+        background-image: url("../img/bg-raspberries.jpg");
+      }
+
+      .features-chocolate {
+        width: 560px;
+        float: right;
+        background-image: url("../img/bg-chocolate.jpg");
+      }
+
+      .products {
+        font-size: 0;
+      }
+
+      .product {
+        margin-top: 38px;
+        width: 267px;
+        display: inline-block;
+        margin-right: 26px;
+        margin-bottom: 38px;
+        vertical-align: top;
+        text-align: center;
+        font-size: 16px;
+        line-height: 22px;
+        list-style: none;
+      }
+
+      .product:nth-child(4n) {
+        margin-right: 0px;
+      }
+
+      .products-catalog {
+        margin-bottom: 18px;
+      }
+
+      .advantages {
+        padding-top: 29px;
+        margin-bottom: 38px;
+        background-image: url("../img/bg-wafer.jpg");
+      }
+
+      .advantages ul {
+        padding: 0;
+      }
+
+      .advantages-title {
+        margin-left: 19px;
+        font-size: 24px;
+        line-height: 30px;
+        font-family: Roboto;
+        margin-top: 30px;
+        margin-bottom: 26px;
+      }
+
+      .advantages li {
+        float: left;
+        width: 485px;
+        list-style: none;
+        margin-bottom: 24px;
+        margin-left: 77px;
+        font-size: 16px;
+        line-height: 22px;
+      }
+
+      .news-subscription {
+        margin-bottom: 38px;
+      }
+
+      .news-subscription article {
+        float: left;
+        width: 560px;
+        margin-bottom: 40px;
+      }
+
+      .subscription {
+        float: right;
+        width: 560px;
+      }
+
+      .map {
+        margin-bottom: 18px;
+        background-image: url("../img/map.jpg");
+      }
+
+      .address {
+        position: absolute;
+        width: 302px;
+        padding-bottom: 57px;
+      }
+
+      .paginator {
+        display: inline-block;
+      }
+
+      .main-footer {
+        margin-bottom: 22px;
+      }
+
+      .footer-social {
+        float: left;
+        width: 267px;
+        margin-right: 26px;
+      }
+
+      .footer-menu {
+        font-size: 13px;
+        line-height: normal;
+        color: #ffffff;
+        font-weight: normal;
+        font-family: Roboto Regular;
+        width: 551px;
+        float: left;
+        margin-right: 25px;
+      }
+
+      .footer-copyright {
+        font-size: 12px;
+        line-height: normal;
+        color: black;
+        font-weight: normal;
+        font-family: Roboto Regular;
+        float: right;
+      }
