--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ body {
   left: -20px;
 }
 
+.catalog-navigation {
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+}
+
 .catalog-navigation a {
   color: #343434;
   background: #f8f7f4;
@@ -84,26 +88,6 @@ body {
 
 .catalog-navigation a:active {
   background: #f6b5a5;
-}
-
-.login-entrance {
-  position: absolute;
-  width: 273px;
-  background-color: #f8f7f4;
-  top: 130px;
-  border-radius: 10px;
-}
-
-.login-entrance a {
-  font-size: 13px;
-  line-height: 24px;
-  color: #333333;
-  width: 100px;
-}
-
-.login-entrance label input[type="email"] {
-  width: 260px;
-  margin: 0;
 }
 
 .login,
@@ -135,6 +119,59 @@ body {
   color: #323232;
 }
 
+.login-entrance {
+  position: absolute;
+  background-color: #f8f7f4;
+  top: 35px;
+  border-radius: 10px;
+  z-index: 3;
+  left: -230px;
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+}
+
+.login-entrance a {
+  font-size: 13px;
+  line-height: 24px;
+  color: #333333;
+  display: block;
+  text-decoration: underline;
+  float: left;
+  margin-left: 48px;
+}
+
+.login-entrance input[type="email"],
+.login-entrance input[type="password"] {
+  width: 243px;
+  min-height: 40px;
+  margin-right: 15px;
+  border-radius: 10px;
+  padding-left: 16px;
+}
+
+.login-entrance input[type="email"] {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.login-entrance input[type="password"] {
+  margin-bottom: 15px;
+}
+
+.login-entrance input[type="submit"] {
+  min-height: 30px;
+  float: left;
+  margin-left: 15px;
+  font-size: 15px;
+  line-height: 24px;
+  font-weight: 700;
+  font-style: normal;
+  padding: 5px 30px 5px 30px;
+}
+
+.login-entrance input[type="submit"]:hover {
+  color: #ffffff;
+}
+
 .search:hover {
   background-color: #f8f7f4;
   background-image: url("../img/icon-search-hover.svg");
@@ -160,6 +197,7 @@ body {
   z-index: 3;
   padding: 16px;
   border-radius: 10px;
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
 .click-search input[type="search"] {
@@ -746,7 +784,7 @@ product:hover::before {
 
 .subscription input[type="email"] {
   width: 368px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   margin-left: 16px;
   font-size: 16px;
   line-height: 24px;
@@ -769,63 +807,6 @@ product:hover::before {
   min-height: 430px;
   position: relative;
   margin-bottom: 18px;
-}
-
-.feedback {
-  position: absolute;
-  width: 280px;
-  padding-bottom: 27px;
-  left: 945px;
-  top: 45px;
-  background-color: #fefefe;
-  color: #343434;
-  border-radius: 15px;
-  padding-top: 31px;
-  padding-left: 25px;
-  font-size: 14px;
-  line-height: 20px;
-  font-style: normal;
-  font-weight: 400;
-  z-index: 2;
-}
-
-.feedback span {
-  font-size: 18px;
-  line-height: 24px;
-  font-style: normal;
-  font-weight: 700;
-  margin-bottom: 10px;
-}
-
-.feedback a {
-  padding: 15px;
-  text-decoration: none;
-  color: #FFFFFF;
-  display: inline-block;
-  margin-top: 21px;
-  width: 230px;
-  text-align: center;
-  font-size: 17px;
-  line-height: 24px;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.feedback-form {
-  width: 480px;
-  background-color: #f8f7f4;
-  padding-left: 25px;
-  border-radius: 10px;
-  position: fixed;
-}
-
-.feedback-form legend {
-  color: #343434;
-  font-size: 24px;
-}
-
-.feedback-form input[type="email"] {
-  margin: 0;
 }
 
 .main-paginator {
@@ -962,4 +943,94 @@ product:hover::before {
 
 .footer-copyright a {
   color: #fefefe;
+}
+
+.feedback {
+  position: absolute;
+  width: 280px;
+  padding-bottom: 27px;
+  left: 945px;
+  top: 45px;
+  background-color: #fefefe;
+  color: #343434;
+  border-radius: 15px;
+  padding-top: 31px;
+  padding-left: 25px;
+  font-size: 14px;
+  line-height: 20px;
+  font-style: normal;
+  font-weight: 400;
+  z-index: 2;
+}
+
+.feedback span {
+  font-size: 18px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.feedback a {
+  padding: 15px;
+  text-decoration: none;
+  color: #FFFFFF;
+  display: inline-block;
+  margin-top: 21px;
+  width: 230px;
+  text-align: center;
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.feedback-form {
+  width: 480px;
+  background-color: #f8f7f4;
+  padding-left: 25px;
+  border-radius: 10px;
+  position: fixed;
+  top: 70px;
+  z-index: 7;
+  left: 400px;
+}
+
+.feedback-form legend {
+  color: #343434;
+  font-size: 24px;
+  line-height: 22px;
+  font-weight: 500;
+  margin-top: 22px;
+  margin-bottom: 24px;
+}
+
+.feedback-form input[type="text"],
+.feedback-form input[type="email"] {
+  margin: 0;
+  width: 270px;
+  margin-bottom: 22px;
+  border-radius: 5px;
+  min-height: 44px;
+  padding-left: 16px;
+  color: black;
+}
+
+.feedback-form textarea {
+  width: 429px;
+  margin-bottom: 40px;
+  min-height: 155px;
+  border-radius: 5px;
+  padding-left: 16px;
+  padding-top: 12px;
+  color: black;
+}
+
+.feedback-form input[type="submit"] {
+  float: right;
+  padding: 10px 28px 10px 28px;
+  font-size: 17px;
+  line-height: 24px;
+  margin-bottom: 43px;
+  margin-right: 30px;
 }
