--- a/postcss/variables.css
+++ b/postcss/variables.css
@@ -1,4 +1,5 @@
 $font-family-set: "Roboto", "Helvetica", "Arial", sans-serif;
 
-@custom-media --tablet-width (min-width: 768px);
-@custom-media --desktop-width (min-width: 1100px);
+$column-width: 22.2%;
+$padding-container: 2.3%;
+$padding-between-column: 2.2%;
