--- a/postcss/blocks/btn.css
+++ b/postcss/blocks/btn.css
@@ -42,6 +42,15 @@
     border-radius: 22px;
   }
 
+  &--xl {
+    display: inline-block;
+    padding: 7px 41px 12px;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 44px;
+    border-radius: 31px;
+  }
+
   &--order {
     padding-right: 13px;
     padding-left: 13px;
