--- a/postcss/blocks/container.css
+++ b/postcss/blocks/container.css
@@ -2,6 +2,6 @@
   max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 2.3%;
-  padding-left: 2.3%;
+  padding-right: var(--padding-container);
+  padding-left: var(--padding-container);
 }
