--- a/postcss/blocks/slider.css
+++ b/postcss/blocks/slider.css
@@ -8,7 +8,7 @@
 .slider__controls {
   position: absolute;
   bottom: 62px;
-  left: -3px;
+  left: 0;
   font-size: 0;
 }
 
@@ -23,7 +23,8 @@
   border-radius: 50%;
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: rgba(255,255,255,.4);
   }
 }
