--- a/postcss/blocks/text-input.css
+++ b/postcss/blocks/text-input.css
@@ -1,4 +1,10 @@
 .text-input {
+  box-sizing: border-box;
+
+  &--grow {
+    display: flex;
+    flex-grow: 1;
+  }
 }
 
 .text-input__control {
@@ -17,14 +23,10 @@
   transition: all .2s ease-out;
   resize: none;
 
-  &:hover,
-  &:focus {
-    padding: 8px 14px;
-    border: 2px solid;
-  }
 
   &:focus {
-    border-color:#8fbdec;
+    padding: 8px 14px;
+    border: 2px solid #8fbdec;
 
     & + .text-input__label--s::before {
       color: #8fbdec;
@@ -33,6 +35,18 @@
     }
 
     & + .text-input__label--l::before {
+      color: #8fbdec;
+      transform: translate(0, -2.2em) scale(0.8, 0.8);
+      transition-duration: .2s;
+    }
+
+    & + .text-input__label--xl::before {
+      color: #8fbdec;
+      transform: translate(0, -2.2em) scale(0.8, 0.8);
+      transition-duration: .2s;
+    }
+
+    & + .text-input__label--subscription::before {
       color: #8fbdec;
       transform: translate(0, -2.2em) scale(0.8, 0.8);
       transition-duration: .2s;
@@ -45,7 +59,7 @@
       color: #999;
       transition-duration: .2s;
     }
-    
+
     & + .text-input__label--s::before {
       transform: translate(0, -2.2em) scale(0.8, 0.8);
     }
@@ -53,21 +67,41 @@
     & + .text-input__label--l::before {
       transform: translate(0, -2.2em) scale(0.8, 0.8);
     }
+
+    & + .text-input__label--xl::before {
+      transform: translate(0, -2.2em) scale(0.8, 0.8);
+    }
+
+    & + .text-input__label--subscription::before {
+      transform: translate(0, -2.2em) scale(0.8, 0.8);
+    }
   }
 
   &:hover {
-    border-color: #c7c6c5;
-  }
-
-  &--xl {
-    width: 310px;
+    padding: 8px 14px;
+    border: 2px solid #c7c6c5;
   }
 
   &--l {
     width: 240px;
   }
 
+  &--xl {
+    width: 270px;
+  }
+
   &--entrance {
+    margin-bottom: 20px;
+  }
+
+  &--subscription {
+    display: flex;
+    flex-grow: 1;
+    width: 240px;
+    margin-right: 15px;
+  }
+
+  &--form {
     margin-bottom: 20px;
   }
 }
@@ -102,6 +136,20 @@
     margin-top: calc(-3.5em - 6px);
     margin-bottom: calc(2.5em - 4px);
     font-size: 14px;
+    line-height: 24px;
+  }
+
+  &--xl {
+    margin-top: calc(-3.5em - 6px);
+    margin-bottom: calc(2.5em - 4px);
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  &--subscription {
+    position: absolute;
+    margin-top: calc(1em - 6px);
+    font-size: 16px;
     line-height: 24px;
   }
 }
