--- a/postcss/blocks/btn.css
+++ b/postcss/blocks/btn.css
@@ -62,6 +62,8 @@
     display: none;
     box-sizing: border-box;
     width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
     text-align: center;
   }
 
@@ -71,7 +73,7 @@
   }
 
   &--feedback-form {
-    margin-left: auto;
     display: block;
+    margin-left: auto;
   }
 }
