--- a/postcss/blocks/table-order.css
+++ b/postcss/blocks/table-order.css
@@ -54,7 +54,7 @@
   font-size: 0;
   vertical-align: top;
   background-color: transparent;
-  background-image: url(../img/icon-close.svg);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16.968' height='16.969' viewBox='0 0 16.968 16.969'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill-rule:evenodd%7D%3C/style%3E%3C/defs%3E%3Cpath id='_Х' data-name='Х' class='cls-1' d='M807.451 354.21l1.182-1.182 15.761 15.761-1.182 1.182zm15.776-1.2l1.182 1.182-15.761 15.761-1.182-1.182z' transform='translate%28-807.438 -353%29'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: 11px 11px;
