add style.css and some optimization

--- a/postcss/blocks/advantages.css
+++ b/postcss/blocks/advantages.css
@@ -13,7 +13,7 @@
   font-weight: 500;
   font-size: 24px;
   line-height: 30px;
-  color: #323232;
+  color: var(--color-text);
 }
 
 .advantages__list {
@@ -26,7 +26,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
-  color: #323232;
+  color: var(--color-text);
 }
 
 
