--- a/postcss/blocks/feedback.css
+++ b/postcss/blocks/feedback.css
@@ -3,7 +3,7 @@
   margin-left: auto;
   padding: 27px 25px 33px;
   text-align: center;
-  color: #323232;
+  color: var(--color-text);
   background-color: white;
   border-radius: 15px;
   pointer-events: all;
@@ -43,7 +43,7 @@
   font-size: 18px;
   line-height: 22px;
   text-align: left;
-  color: #323232;
+  color: var(--color-text);
   text-decoration: none;
 }
 
