--- a/postcss/blocks/form-login.css
+++ b/postcss/blocks/form-login.css
@@ -13,7 +13,7 @@
   font-weight: 400;
   font-size: 13px;
   line-height: 21px;
-  color: #323232;
+  color: var(--color-text);
   text-decoration: none;
 
   &:active,
