--- a/postcss/variables.css
+++ b/postcss/variables.css
@@ -3,4 +3,6 @@
   --column-width: 23.2%;
   --padding-container: 2.3%;
   --padding-between-column: 2.35%;
+  --color-text: #323232;
+  --bg-color-hue-white: #f8f7f4;
 }
