--- a/postcss/blocks/basket.css
+++ b/postcss/blocks/basket.css
@@ -12,8 +12,8 @@
 
   &:hover,
   &:focus {
-    color: #323232;
-    background-color: #f8f7f4;
+    color: var(--color-text);
+    background-color: var(--bg-color-hue-white);
 
     & .basket__popup {
       visibility: visible;
