--- a/postcss/blocks/catalog-navigation.css
+++ b/postcss/blocks/catalog-navigation.css
@@ -8,7 +8,7 @@
   padding: 0;
   overflow: hidden;
   list-style: none;
-  background-color: #f8f7f4;
+  background-color: var(--bg-color-hue-white);
   border-radius: 10px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .4);
   visibility: hidden;
@@ -52,7 +52,7 @@
     &:hover,
     &:active,
     &:focus {
-      background-color: #f8f7f4;
+      background-color: var(--bg-color-hue-white);
     }
   }
 
