--- a/postcss/blocks/form-filter.css
+++ b/postcss/blocks/form-filter.css
@@ -35,12 +35,12 @@
 
   &:hover,
   &:focus {
-    color: #323232;
+    color: var(--color-text);
     background-color: white;
   }
 
   &:active {
-    color: #323232;
+    color: var(--color-text);
     background-color: #eaeaea;
     border: none;
     box-shadow: inset 0 2px 1px 0 #696969;
