--- a/postcss/blocks/form-search.css
+++ b/postcss/blocks/form-search.css
@@ -5,7 +5,7 @@
   z-index: 3;
   display: none;
   padding: 20px 16px;
-  background-color: #f8f7f4;
+  background-color: var(--bg-color-hue-white);
   border-radius: 10px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .4);
 }
