--- a/postcss/blocks/login.css
+++ b/postcss/blocks/login.css
@@ -14,8 +14,8 @@
 
   &:hover,
   &:focus {
-    color: #323232;
-    background-color: #f8f7f4;
+    color: var(--color-text);
+    background-color: var(--bg-color-hue-white);
 
     & .login__entrance {
       display: block;
@@ -59,7 +59,7 @@
   right: 0;
   z-index: 3;
   display: none;
-  background-color: #f8f7f4;
+  background-color: var(--bg-color-hue-white);
   border-radius: 5px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .4);
 }
