--- a/postcss/blocks/table-order.css
+++ b/postcss/blocks/table-order.css
@@ -4,8 +4,8 @@
   font-weight: normal;
   font-size: 13px;
   line-height: 17px;
-  color: #323232;
-  background-color: #f8f7f4;
+  color: var(--color-text);
+  background-color: var(--bg-color-hue-white);
   border-radius: 5px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .4);
 }
