--- a/postcss/blocks/textarea.css
+++ b/postcss/blocks/textarea.css
@@ -1,7 +1,7 @@
 .textarea {
   position: relative;
   box-sizing: border-box;
-  color: #323232;
+  color: var(--color-text);
   background-color: transparent;
 }
 
